test/should_fail/enum_012.grg
actions enum_012 using enum_model_006;

rule r {
	pattern {
	}
	replace {
	}
}



